fix styling with z-index

--- a/src/components/miscellaneous/style.css
+++ b/src/components/miscellaneous/style.css
@@ -12,7 +12,7 @@
   bottom: 0;
   text-align: center;
   color: #ffffff;
-  z-index: 100;
+  /* z-index: 100; */
   font-size: 35px;
   width: 100%;
   padding-top: 15px;
@@ -30,4 +30,9 @@
 .status-hidden {
   opacity: 0;
   transition: all 400ms linear;
+  z-index: -999;
+}
+
+.status-visible {
+  z-index: 999;
 }
