--- a/src/pages/ToscaOnDemand/style.css
+++ b/src/pages/ToscaOnDemand/style.css
@@ -8,7 +8,7 @@ body {
   width: 50%;
   min-width: 500px;
   position: fixed;
-  z-index: 1;
+  /* z-index: 1; */
   top: 0;
   overflow-x: hidden;
 }
@@ -17,6 +17,10 @@ body {
   .split {
     position: static;
     width: 100%;
+  }
+
+  .on-demand-right {
+    padding-bottom: 100px;
   }
 }
 
